--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -7,6 +7,9 @@ $clr5: #dff0ea;
 $clr6: #fff;
 $clr7: #222;
 
+$white: #FFFFFF;
+
+
 $welcome-bgc:#014E56;
 $intro-bgc:#012F34;
 $experience-bgc:#004047;
