--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -7,8 +7,8 @@
 }
 
 html {
-    font-family: Livvic;
-    line-height: 1.6;
+    font-family: Livvic ,Arial, Helvetica, sans-serif;
+    // line-height: 1.6;
 }
 
 body {
