--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -67,3 +67,10 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@mixin bold800{
+  font-weight: 800;
+}
+@mixin bold600{
+  font-weight: 600;
+}
