--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -15,6 +15,7 @@ $intro-bgc:#012F34;
 $experience-bgc:#004047;
 $contact-us-bgc:#F67E7E;
 $footer-bgc:#002529;
+$line-center-content-welcome:#79C8C7;
 
 
 $layoutPadding-small: 24px;
