--- a/src/assets/styles/cmps/welcome/_welcome.scss
+++ b/src/assets/styles/cmps/welcome/_welcome.scss
@@ -4,7 +4,7 @@
     grid-template-rows:min-content;
 
     .img-bottom{
-        margin-top:130px ;
+        margin-top:100px ;
         grid-column: 1/-1;
         padding: 0em 0.5em;
         height: fit-content;
@@ -12,26 +12,30 @@
         flex-direction: column;
         align-items: flex-end;
         justify-content: flex-end;
-       
 
-    }
-    .imgBottom{
-        // height: 100px;
-        width: 100%;
-
+        .imgBottom{
+            // height: 100px;
+            width: 100%;
+    
+        }
     }
 
     @include for-normal-layout {
         height: 700px;
+        width: max-content;
         .img-bottom{
+            grid-column: 2;
             margin-top:8.9em ;
-            height: fit-content;    
-        }
-        .imgBottom{
-            margin-top:100px ;
-            height: 100px;
-            width: 365px;
-    
+            height: fit-content;  
+            padding: 0;
+
+
+            .imgBottom{
+                margin-top:0 ;
+                height: 100px;
+                width: 365px;
+        
+            }
         }
 
 
