--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -15,11 +15,11 @@
   }
 }
 
-@mixin for-wide-layout {
-  @media (min-width: $padded-break-wide ) {
-    @content;
-  }
-}
+// @mixin for-wide-layout {
+//   @media (min-width: $padded-break-wide ) {
+//     @content;
+//   }
+// }
 
 /* Media  Mixins */
 @mixin aspect-ratio($width, $height) {
